--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,7 +1,3 @@
-/* index.css from Vite React template */
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} 
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
